# miquella

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  conanfile_win.txt  requirements.txt  run_cmake_script.bat  run_cmake_script.sh  version.cmake
cmake/: CompilerWarnings.cmake  Conan.cmake  Coverage.cmake  Sanitizers.cmake
include/miquella/core/: camera.h  dielectric.h  diffuseLight.h  hit.h  lambertian.h  lookAtCamera.h  material.h  metal.h  object.h  ray.h  rectangle.h  renderer.h  rendererThreads.h  scene.h  sceneFactory.h  simpleCamera.h  sphere.h  utility.h
include/miquella/core/io/: ppm.h
include/miquella/http/: http.h
services/client/: CMakeLists.txt  client.cpp
services/controller/: jobTable.py  localController.py
services/server/: CMakeLists.txt  server.cpp
src/: CMakeLists.txt  main.cpp
src/benchmark/: CMakeLists.txt  mainBenchmark.cpp
src/lib/: CMakeLists.txt  dielectric.cpp  http.cpp  lookAtCamera.cpp  metal.cpp  rectangle.cpp  renderer.cpp  rendererThreads.cpp  scene.cpp  sceneFactory.cpp  simpleCamera.cpp  sphere.cpp
src/services/client/: CMakeLists.txt
src/services/controller/: jobTable.py
src/services/server/: CMakeLists.txt  server.cpp
src/standalone/: CMakeLists.txt  main.cpp
